// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scanner should-work-with-arrays 1`] = `
Array [
  Object {
    "__debugKind": "ArraysKeyword",
    "end": 5,
    "fullPos": 0,
    "kind": 23,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 7,
    "fullPos": 5,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 9,
    "fullPos": 7,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 7,
    "value": "10",
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 10,
    "fullPos": 9,
    "kind": 1,
    "leadingIndent": 0,
    "pos": 9,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 12,
    "fullPos": 10,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 11,
    "value": "0",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 13,
    "fullPos": 12,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 12,
  },
  Object {
    "__debugKind": "ArraysKeyword",
    "end": 19,
    "fullPos": 13,
    "kind": 23,
    "leadingIndent": 0,
    "pos": 14,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 21,
    "fullPos": 19,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 20,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 23,
    "fullPos": 21,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 21,
    "value": "10",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 24,
    "fullPos": 23,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 23,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 24,
    "fullPos": 24,
    "kind": 41,
    "leadingIndent": 0,
    "pos": 24,
  },
]
`;

exports[`Scanner should-work-with-binary-shorthand 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 4,
    "text": "x",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 7,
    "fullPos": 5,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 9,
    "fullPos": 7,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 8,
    "value": "1",
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 13,
    "fullPos": 9,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 10,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 15,
    "fullPos": 13,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 14,
    "text": "y",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 17,
    "fullPos": 15,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 16,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 19,
    "fullPos": 17,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 18,
    "value": "2",
  },
  Object {
    "__debugKind": "Identifier",
    "end": 22,
    "fullPos": 19,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 21,
    "text": "x",
  },
  Object {
    "__debugKind": "AddToken",
    "end": 24,
    "fullPos": 22,
    "kind": 9,
    "leadingIndent": 0,
    "pos": 23,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 26,
    "fullPos": 24,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 25,
    "text": "y",
  },
  Object {
    "__debugKind": "Identifier",
    "end": 28,
    "fullPos": 26,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 27,
    "text": "x",
  },
  Object {
    "__debugKind": "SubToken",
    "end": 30,
    "fullPos": 28,
    "kind": 10,
    "leadingIndent": 0,
    "pos": 29,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 32,
    "fullPos": 30,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 31,
    "text": "y",
  },
  Object {
    "__debugKind": "Identifier",
    "end": 34,
    "fullPos": 32,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 33,
    "text": "x",
  },
  Object {
    "__debugKind": "MulToken",
    "end": 36,
    "fullPos": 34,
    "kind": 11,
    "leadingIndent": 0,
    "pos": 35,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 38,
    "fullPos": 36,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 37,
    "text": "y",
  },
  Object {
    "__debugKind": "Identifier",
    "end": 40,
    "fullPos": 38,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 39,
    "text": "x",
  },
  Object {
    "__debugKind": "DivToken",
    "end": 42,
    "fullPos": 40,
    "kind": 12,
    "leadingIndent": 0,
    "pos": 41,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 44,
    "fullPos": 42,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 43,
    "text": "y",
  },
  Object {
    "__debugKind": "Identifier",
    "end": 46,
    "fullPos": 44,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 45,
    "text": "x",
  },
  Object {
    "__debugKind": "ModToken",
    "end": 48,
    "fullPos": 46,
    "kind": 13,
    "leadingIndent": 0,
    "pos": 47,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 50,
    "fullPos": 48,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 49,
    "text": "y",
  },
  Object {
    "__debugKind": "Identifier",
    "end": 52,
    "fullPos": 50,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 51,
    "text": "x",
  },
  Object {
    "__debugKind": "LessThanToken",
    "end": 54,
    "fullPos": 52,
    "kind": 14,
    "leadingIndent": 0,
    "pos": 53,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 56,
    "fullPos": 54,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 55,
    "text": "y",
  },
  Object {
    "__debugKind": "Identifier",
    "end": 58,
    "fullPos": 56,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 57,
    "text": "x",
  },
  Object {
    "__debugKind": "GreaterThanToken",
    "end": 60,
    "fullPos": 58,
    "kind": 15,
    "leadingIndent": 0,
    "pos": 59,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 62,
    "fullPos": 60,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 61,
    "text": "y",
  },
  Object {
    "__debugKind": "Identifier",
    "end": 64,
    "fullPos": 62,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 63,
    "text": "x",
  },
  Object {
    "__debugKind": "LessEqualsThanToken",
    "end": 67,
    "fullPos": 64,
    "kind": 16,
    "leadingIndent": 0,
    "pos": 65,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 69,
    "fullPos": 67,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 68,
    "text": "y",
  },
  Object {
    "__debugKind": "Identifier",
    "end": 71,
    "fullPos": 69,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 70,
    "text": "x",
  },
  Object {
    "__debugKind": "GreaterEqualsThanToken",
    "end": 74,
    "fullPos": 71,
    "kind": 17,
    "leadingIndent": 0,
    "pos": 72,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 76,
    "fullPos": 74,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 75,
    "text": "y",
  },
  Object {
    "__debugKind": "Identifier",
    "end": 78,
    "fullPos": 76,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 77,
    "text": "x",
  },
  Object {
    "__debugKind": "EqualsEqualsToken",
    "end": 81,
    "fullPos": 78,
    "kind": 18,
    "leadingIndent": 0,
    "pos": 79,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 83,
    "fullPos": 81,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 82,
    "text": "y",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 84,
    "fullPos": 83,
    "kind": 41,
    "leadingIndent": 0,
    "pos": 83,
  },
]
`;

exports[`Scanner should-work-with-break-and-continue 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 4,
    "text": "x",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 7,
    "fullPos": 5,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 9,
    "fullPos": 7,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 8,
    "value": "4",
  },
  Object {
    "__debugKind": "WhileKeyword",
    "end": 15,
    "fullPos": 9,
    "kind": 30,
    "leadingIndent": 0,
    "pos": 10,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 17,
    "fullPos": 15,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 16,
    "text": "x",
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 18,
    "fullPos": 17,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 17,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 24,
    "fullPos": 18,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 23,
    "text": "x",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 26,
    "fullPos": 24,
    "kind": 6,
    "leadingIndent": 4,
    "pos": 25,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 28,
    "fullPos": 26,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 27,
    "text": "x",
  },
  Object {
    "__debugKind": "SubToken",
    "end": 30,
    "fullPos": 28,
    "kind": 10,
    "leadingIndent": 4,
    "pos": 29,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 32,
    "fullPos": 30,
    "kind": 19,
    "leadingIndent": 4,
    "pos": 31,
    "value": "1",
  },
  Object {
    "__debugKind": "PrintfKeyword",
    "end": 43,
    "fullPos": 32,
    "kind": 22,
    "leadingIndent": 4,
    "pos": 37,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 44,
    "fullPos": 43,
    "kind": 2,
    "leadingIndent": 4,
    "pos": 43,
  },
  Object {
    "__debugKind": "StringLiteralToken",
    "end": 57,
    "fullPos": 44,
    "kind": 20,
    "leadingIndent": 4,
    "pos": 44,
    "value": "while start",
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 58,
    "fullPos": 57,
    "kind": 1,
    "leadingIndent": 4,
    "pos": 57,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 60,
    "fullPos": 58,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 59,
    "text": "x",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 61,
    "fullPos": 60,
    "kind": 3,
    "leadingIndent": 4,
    "pos": 60,
  },
  Object {
    "__debugKind": "IfKeyword",
    "end": 68,
    "fullPos": 61,
    "kind": 28,
    "leadingIndent": 4,
    "pos": 66,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 70,
    "fullPos": 68,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 69,
    "text": "x",
  },
  Object {
    "__debugKind": "EqualsEqualsToken",
    "end": 73,
    "fullPos": 70,
    "kind": 18,
    "leadingIndent": 4,
    "pos": 71,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 75,
    "fullPos": 73,
    "kind": 19,
    "leadingIndent": 4,
    "pos": 74,
    "value": "2",
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 76,
    "fullPos": 75,
    "kind": 4,
    "leadingIndent": 4,
    "pos": 75,
  },
  Object {
    "__debugKind": "ContinueKeyword",
    "end": 93,
    "fullPos": 76,
    "kind": 34,
    "leadingIndent": 8,
    "pos": 85,
  },
  Object {
    "__debugKind": "IfKeyword",
    "end": 100,
    "fullPos": 93,
    "kind": 28,
    "leadingIndent": 4,
    "pos": 98,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 102,
    "fullPos": 100,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 101,
    "text": "x",
  },
  Object {
    "__debugKind": "EqualsEqualsToken",
    "end": 105,
    "fullPos": 102,
    "kind": 18,
    "leadingIndent": 4,
    "pos": 103,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 107,
    "fullPos": 105,
    "kind": 19,
    "leadingIndent": 4,
    "pos": 106,
    "value": "1",
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 108,
    "fullPos": 107,
    "kind": 4,
    "leadingIndent": 4,
    "pos": 107,
  },
  Object {
    "__debugKind": "BreakKeyword",
    "end": 122,
    "fullPos": 108,
    "kind": 33,
    "leadingIndent": 8,
    "pos": 117,
  },
  Object {
    "__debugKind": "PrintfKeyword",
    "end": 133,
    "fullPos": 122,
    "kind": 22,
    "leadingIndent": 4,
    "pos": 127,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 134,
    "fullPos": 133,
    "kind": 2,
    "leadingIndent": 4,
    "pos": 133,
  },
  Object {
    "__debugKind": "StringLiteralToken",
    "end": 145,
    "fullPos": 134,
    "kind": 20,
    "leadingIndent": 4,
    "pos": 134,
    "value": "while end",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 146,
    "fullPos": 145,
    "kind": 3,
    "leadingIndent": 4,
    "pos": 145,
  },
  Object {
    "__debugKind": "PrintfKeyword",
    "end": 154,
    "fullPos": 146,
    "kind": 22,
    "leadingIndent": 0,
    "pos": 148,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 155,
    "fullPos": 154,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 154,
  },
  Object {
    "__debugKind": "StringLiteralToken",
    "end": 162,
    "fullPos": 155,
    "kind": 20,
    "leadingIndent": 0,
    "pos": 155,
    "value": "after",
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 163,
    "fullPos": 162,
    "kind": 1,
    "leadingIndent": 0,
    "pos": 162,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 165,
    "fullPos": 163,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 164,
    "text": "x",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 166,
    "fullPos": 165,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 165,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 167,
    "fullPos": 166,
    "kind": 41,
    "leadingIndent": 0,
    "pos": 166,
  },
]
`;

exports[`Scanner should-work-with-function 1`] = `
Array [
  Object {
    "__debugKind": "DefnKeyword",
    "end": 4,
    "fullPos": 0,
    "kind": 32,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 6,
    "fullPos": 4,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 5,
    "text": "f",
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 7,
    "fullPos": 6,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 8,
    "fullPos": 7,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 7,
    "text": "x",
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 9,
    "fullPos": 8,
    "kind": 1,
    "leadingIndent": 0,
    "pos": 8,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 11,
    "fullPos": 9,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 10,
    "text": "y",
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 12,
    "fullPos": 11,
    "kind": 1,
    "leadingIndent": 0,
    "pos": 11,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 14,
    "fullPos": 12,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 13,
    "text": "z",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 16,
    "fullPos": 14,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 15,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 17,
    "fullPos": 16,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 16,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 23,
    "fullPos": 17,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 22,
    "text": "x",
  },
  Object {
    "__debugKind": "AddToken",
    "end": 25,
    "fullPos": 23,
    "kind": 9,
    "leadingIndent": 4,
    "pos": 24,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 27,
    "fullPos": 25,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 26,
    "text": "y",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 27,
    "fullPos": 27,
    "kind": 41,
    "leadingIndent": 4,
    "pos": 27,
  },
]
`;

exports[`Scanner should-work-with-function-call 1`] = `
Array [
  Object {
    "__debugKind": "DefnKeyword",
    "end": 4,
    "fullPos": 0,
    "kind": 32,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 6,
    "fullPos": 4,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 5,
    "text": "f",
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 7,
    "fullPos": 6,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 8,
    "fullPos": 7,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 7,
    "text": "v",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 9,
    "fullPos": 8,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 8,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 10,
    "fullPos": 9,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 9,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 16,
    "fullPos": 10,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 15,
    "text": "v",
  },
  Object {
    "__debugKind": "Identifier",
    "end": 19,
    "fullPos": 16,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 18,
    "text": "f",
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 20,
    "fullPos": 19,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 19,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 22,
    "fullPos": 20,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 20,
    "value": "10",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 23,
    "fullPos": 22,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 22,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 23,
    "fullPos": 23,
    "kind": 41,
    "leadingIndent": 0,
    "pos": 23,
  },
]
`;

exports[`Scanner should-work-with-function-expression 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 6,
    "fullPos": 3,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 4,
    "text": "fn",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 8,
    "fullPos": 6,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 7,
  },
  Object {
    "__debugKind": "DefnKeyword",
    "end": 13,
    "fullPos": 8,
    "kind": 32,
    "leadingIndent": 0,
    "pos": 9,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 17,
    "fullPos": 13,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 14,
    "text": "foo",
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 18,
    "fullPos": 17,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 17,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 19,
    "fullPos": 18,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 18,
    "text": "x",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 20,
    "fullPos": 19,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 19,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 21,
    "fullPos": 20,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 20,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 27,
    "fullPos": 21,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 26,
    "text": "x",
  },
  Object {
    "__debugKind": "AddToken",
    "end": 29,
    "fullPos": 27,
    "kind": 9,
    "leadingIndent": 4,
    "pos": 28,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 31,
    "fullPos": 29,
    "kind": 19,
    "leadingIndent": 4,
    "pos": 30,
    "value": "1",
  },
  Object {
    "__debugKind": "PrintfKeyword",
    "end": 39,
    "fullPos": 31,
    "kind": 22,
    "leadingIndent": 0,
    "pos": 33,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 40,
    "fullPos": 39,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 39,
  },
  Object {
    "__debugKind": "StringLiteralToken",
    "end": 42,
    "fullPos": 40,
    "kind": 20,
    "leadingIndent": 0,
    "pos": 40,
    "value": "",
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 43,
    "fullPos": 42,
    "kind": 1,
    "leadingIndent": 0,
    "pos": 42,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 46,
    "fullPos": 43,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 44,
    "text": "fn",
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 47,
    "fullPos": 46,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 46,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 48,
    "fullPos": 47,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 47,
    "value": "2",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 49,
    "fullPos": 48,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 48,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 50,
    "fullPos": 49,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 49,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 51,
    "fullPos": 50,
    "kind": 41,
    "leadingIndent": 0,
    "pos": 50,
  },
]
`;

exports[`Scanner should-work-with-get-shorthand 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 4,
    "text": "a",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 7,
    "fullPos": 5,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "ArraysKeyword",
    "end": 13,
    "fullPos": 7,
    "kind": 23,
    "leadingIndent": 0,
    "pos": 8,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 14,
    "fullPos": 13,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 13,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 15,
    "fullPos": 14,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 14,
    "value": "2",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 16,
    "fullPos": 15,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 15,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 19,
    "fullPos": 16,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 18,
    "text": "a",
  },
  Object {
    "__debugKind": "OpenBracketToken",
    "end": 20,
    "fullPos": 19,
    "kind": 7,
    "leadingIndent": 0,
    "pos": 19,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 21,
    "fullPos": 20,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 20,
    "value": "1",
  },
  Object {
    "__debugKind": "CloseBracketToken",
    "end": 22,
    "fullPos": 21,
    "kind": 8,
    "leadingIndent": 0,
    "pos": 21,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 22,
    "fullPos": 22,
    "kind": 41,
    "leadingIndent": 0,
    "pos": 22,
  },
]
`;

exports[`Scanner should-work-with-global-variable 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 4,
    "text": "x",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 7,
    "fullPos": 5,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 10,
    "fullPos": 7,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 8,
    "value": "42",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 10,
    "fullPos": 10,
    "kind": 41,
    "leadingIndent": 0,
    "pos": 10,
  },
]
`;

exports[`Scanner should-work-with-if-expression 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 4,
    "text": "x",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 7,
    "fullPos": 5,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 9,
    "fullPos": 7,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 8,
    "value": "1",
  },
  Object {
    "__debugKind": "IfKeyword",
    "end": 13,
    "fullPos": 9,
    "kind": 28,
    "leadingIndent": 0,
    "pos": 11,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 15,
    "fullPos": 13,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 14,
    "text": "x",
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 16,
    "fullPos": 15,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 15,
  },
  Object {
    "__debugKind": "PrintfKeyword",
    "end": 27,
    "fullPos": 16,
    "kind": 22,
    "leadingIndent": 4,
    "pos": 21,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 28,
    "fullPos": 27,
    "kind": 2,
    "leadingIndent": 4,
    "pos": 27,
  },
  Object {
    "__debugKind": "StringLiteralToken",
    "end": 31,
    "fullPos": 28,
    "kind": 20,
    "leadingIndent": 4,
    "pos": 28,
    "value": "A",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 32,
    "fullPos": 31,
    "kind": 3,
    "leadingIndent": 4,
    "pos": 31,
  },
  Object {
    "__debugKind": "ElseKeyword",
    "end": 37,
    "fullPos": 32,
    "kind": 29,
    "leadingIndent": 0,
    "pos": 33,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 38,
    "fullPos": 37,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 37,
  },
  Object {
    "__debugKind": "PrintfKeyword",
    "end": 49,
    "fullPos": 38,
    "kind": 22,
    "leadingIndent": 4,
    "pos": 43,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 50,
    "fullPos": 49,
    "kind": 2,
    "leadingIndent": 4,
    "pos": 49,
  },
  Object {
    "__debugKind": "StringLiteralToken",
    "end": 53,
    "fullPos": 50,
    "kind": 20,
    "leadingIndent": 4,
    "pos": 50,
    "value": "B",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 54,
    "fullPos": 53,
    "kind": 3,
    "leadingIndent": 4,
    "pos": 53,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 54,
    "fullPos": 54,
    "kind": 41,
    "leadingIndent": 4,
    "pos": 54,
  },
]
`;

exports[`Scanner should-work-with-if-expression-with-if-only 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 4,
    "text": "x",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 7,
    "fullPos": 5,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 9,
    "fullPos": 7,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 8,
    "value": "1",
  },
  Object {
    "__debugKind": "IfKeyword",
    "end": 13,
    "fullPos": 9,
    "kind": 28,
    "leadingIndent": 0,
    "pos": 11,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 15,
    "fullPos": 13,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 14,
    "text": "x",
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 16,
    "fullPos": 15,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 15,
  },
  Object {
    "__debugKind": "PrintfKeyword",
    "end": 27,
    "fullPos": 16,
    "kind": 22,
    "leadingIndent": 4,
    "pos": 21,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 28,
    "fullPos": 27,
    "kind": 2,
    "leadingIndent": 4,
    "pos": 27,
  },
  Object {
    "__debugKind": "StringLiteralToken",
    "end": 31,
    "fullPos": 28,
    "kind": 20,
    "leadingIndent": 4,
    "pos": 28,
    "value": "A",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 32,
    "fullPos": 31,
    "kind": 3,
    "leadingIndent": 4,
    "pos": 31,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 32,
    "fullPos": 32,
    "kind": 41,
    "leadingIndent": 4,
    "pos": 32,
  },
]
`;

exports[`Scanner should-work-with-integer 1`] = `
Array [
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 1,
    "fullPos": 0,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 0,
    "value": "1",
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 4,
    "fullPos": 1,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 2,
    "value": "42",
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 15,
    "fullPos": 4,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 5,
    "value": "2333333333",
  },
  Object {
    "__debugKind": "SubToken",
    "end": 17,
    "fullPos": 15,
    "kind": 10,
    "leadingIndent": 0,
    "pos": 16,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 18,
    "fullPos": 17,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 17,
    "value": "1",
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 20,
    "fullPos": 18,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 19,
    "value": "0",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 20,
    "fullPos": 20,
    "kind": 41,
    "leadingIndent": 0,
    "pos": 20,
  },
]
`;

exports[`Scanner should-work-with-local-variable 1`] = `
Array [
  Object {
    "__debugKind": "DefnKeyword",
    "end": 4,
    "fullPos": 0,
    "kind": 32,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 8,
    "fullPos": 4,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 5,
    "text": "foo",
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 9,
    "fullPos": 8,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 8,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 10,
    "fullPos": 9,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 9,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 11,
    "fullPos": 10,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 10,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 19,
    "fullPos": 11,
    "kind": 26,
    "leadingIndent": 4,
    "pos": 16,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 21,
    "fullPos": 19,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 20,
    "text": "x",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 23,
    "fullPos": 21,
    "kind": 6,
    "leadingIndent": 4,
    "pos": 22,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 26,
    "fullPos": 23,
    "kind": 19,
    "leadingIndent": 4,
    "pos": 24,
    "value": "42",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 27,
    "fullPos": 26,
    "kind": 41,
    "leadingIndent": 0,
    "pos": 26,
  },
]
`;

exports[`Scanner should-work-with-method-call 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 4,
    "text": "o",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 7,
    "fullPos": 5,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "ObjectsKeyword",
    "end": 14,
    "fullPos": 7,
    "kind": 25,
    "leadingIndent": 0,
    "pos": 8,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 15,
    "fullPos": 14,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 14,
  },
  Object {
    "__debugKind": "MethodKeyword",
    "end": 26,
    "fullPos": 15,
    "kind": 31,
    "leadingIndent": 4,
    "pos": 20,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 28,
    "fullPos": 26,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 27,
    "text": "f",
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 29,
    "fullPos": 28,
    "kind": 2,
    "leadingIndent": 4,
    "pos": 28,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 30,
    "fullPos": 29,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 29,
    "text": "x",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 31,
    "fullPos": 30,
    "kind": 3,
    "leadingIndent": 4,
    "pos": 30,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 32,
    "fullPos": 31,
    "kind": 4,
    "leadingIndent": 4,
    "pos": 31,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 42,
    "fullPos": 32,
    "kind": 21,
    "leadingIndent": 8,
    "pos": 41,
    "text": "x",
  },
  Object {
    "__debugKind": "Identifier",
    "end": 45,
    "fullPos": 42,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 44,
    "text": "o",
  },
  Object {
    "__debugKind": "DotToken",
    "end": 46,
    "fullPos": 45,
    "kind": 5,
    "leadingIndent": 0,
    "pos": 45,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 47,
    "fullPos": 46,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 46,
    "text": "f",
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 48,
    "fullPos": 47,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 47,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 50,
    "fullPos": 48,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 48,
    "value": "10",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 51,
    "fullPos": 50,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 50,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 51,
    "fullPos": 51,
    "kind": 41,
    "leadingIndent": 0,
    "pos": 51,
  },
]
`;

exports[`Scanner should-work-with-nested-function 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 4,
    "text": "m",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 7,
    "fullPos": 5,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 9,
    "fullPos": 7,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 8,
    "value": "1",
  },
  Object {
    "__debugKind": "DefnKeyword",
    "end": 14,
    "fullPos": 9,
    "kind": 32,
    "leadingIndent": 0,
    "pos": 10,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 18,
    "fullPos": 14,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 15,
    "text": "foo",
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 19,
    "fullPos": 18,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 18,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 20,
    "fullPos": 19,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 19,
    "text": "x",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 21,
    "fullPos": 20,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 20,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 22,
    "fullPos": 21,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 21,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 30,
    "fullPos": 22,
    "kind": 26,
    "leadingIndent": 4,
    "pos": 27,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 32,
    "fullPos": 30,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 31,
    "text": "y",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 34,
    "fullPos": 32,
    "kind": 6,
    "leadingIndent": 4,
    "pos": 33,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 36,
    "fullPos": 34,
    "kind": 19,
    "leadingIndent": 4,
    "pos": 35,
    "value": "1",
  },
  Object {
    "__debugKind": "DefnKeyword",
    "end": 45,
    "fullPos": 36,
    "kind": 32,
    "leadingIndent": 4,
    "pos": 41,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 49,
    "fullPos": 45,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 46,
    "text": "bar",
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 50,
    "fullPos": 49,
    "kind": 2,
    "leadingIndent": 4,
    "pos": 49,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 51,
    "fullPos": 50,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 50,
    "text": "z",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 52,
    "fullPos": 51,
    "kind": 3,
    "leadingIndent": 4,
    "pos": 51,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 53,
    "fullPos": 52,
    "kind": 4,
    "leadingIndent": 4,
    "pos": 52,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 63,
    "fullPos": 53,
    "kind": 21,
    "leadingIndent": 8,
    "pos": 62,
    "text": "m",
  },
  Object {
    "__debugKind": "AddToken",
    "end": 65,
    "fullPos": 63,
    "kind": 9,
    "leadingIndent": 8,
    "pos": 64,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 67,
    "fullPos": 65,
    "kind": 21,
    "leadingIndent": 8,
    "pos": 66,
    "text": "x",
  },
  Object {
    "__debugKind": "AddToken",
    "end": 69,
    "fullPos": 67,
    "kind": 9,
    "leadingIndent": 8,
    "pos": 68,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 71,
    "fullPos": 69,
    "kind": 21,
    "leadingIndent": 8,
    "pos": 70,
    "text": "y",
  },
  Object {
    "__debugKind": "AddToken",
    "end": 73,
    "fullPos": 71,
    "kind": 9,
    "leadingIndent": 8,
    "pos": 72,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 75,
    "fullPos": 73,
    "kind": 21,
    "leadingIndent": 8,
    "pos": 74,
    "text": "z",
  },
  Object {
    "__debugKind": "AddToken",
    "end": 77,
    "fullPos": 75,
    "kind": 9,
    "leadingIndent": 8,
    "pos": 76,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 79,
    "fullPos": 77,
    "kind": 19,
    "leadingIndent": 8,
    "pos": 78,
    "value": "1",
  },
  Object {
    "__debugKind": "Identifier",
    "end": 87,
    "fullPos": 79,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 84,
    "text": "bar",
  },
  Object {
    "__debugKind": "PrintfKeyword",
    "end": 94,
    "fullPos": 87,
    "kind": 22,
    "leadingIndent": 0,
    "pos": 88,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 95,
    "fullPos": 94,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 94,
  },
  Object {
    "__debugKind": "StringLiteralToken",
    "end": 97,
    "fullPos": 95,
    "kind": 20,
    "leadingIndent": 0,
    "pos": 95,
    "value": "",
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 98,
    "fullPos": 97,
    "kind": 1,
    "leadingIndent": 0,
    "pos": 97,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 102,
    "fullPos": 98,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 99,
    "text": "foo",
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 103,
    "fullPos": 102,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 102,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 104,
    "fullPos": 103,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 103,
    "value": "1",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 105,
    "fullPos": 104,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 104,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 106,
    "fullPos": 105,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 105,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 107,
    "fullPos": 106,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 106,
    "value": "1",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 108,
    "fullPos": 107,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 107,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 109,
    "fullPos": 108,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 108,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 109,
    "fullPos": 109,
    "kind": 41,
    "leadingIndent": 0,
    "pos": 109,
  },
]
`;

exports[`Scanner should-work-with-null 1`] = `
Array [
  Object {
    "__debugKind": "NullKeyword",
    "end": 4,
    "fullPos": 0,
    "kind": 24,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 4,
    "fullPos": 4,
    "kind": 41,
    "leadingIndent": 0,
    "pos": 4,
  },
]
`;

exports[`Scanner should-work-with-object-without-extends 1`] = `
Array [
  Object {
    "__debugKind": "ObjectsKeyword",
    "end": 6,
    "fullPos": 0,
    "kind": 25,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 7,
    "fullPos": 6,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 15,
    "fullPos": 7,
    "kind": 26,
    "leadingIndent": 4,
    "pos": 12,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 17,
    "fullPos": 15,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 16,
    "text": "x",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 19,
    "fullPos": 17,
    "kind": 6,
    "leadingIndent": 4,
    "pos": 18,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 22,
    "fullPos": 19,
    "kind": 19,
    "leadingIndent": 4,
    "pos": 20,
    "value": "10",
  },
  Object {
    "__debugKind": "MethodKeyword",
    "end": 33,
    "fullPos": 22,
    "kind": 31,
    "leadingIndent": 4,
    "pos": 27,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 35,
    "fullPos": 33,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 34,
    "text": "f",
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 36,
    "fullPos": 35,
    "kind": 2,
    "leadingIndent": 4,
    "pos": 35,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 37,
    "fullPos": 36,
    "kind": 3,
    "leadingIndent": 4,
    "pos": 36,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 38,
    "fullPos": 37,
    "kind": 4,
    "leadingIndent": 4,
    "pos": 37,
  },
  Object {
    "__debugKind": "ThisKeyword",
    "end": 51,
    "fullPos": 38,
    "kind": 27,
    "leadingIndent": 8,
    "pos": 47,
  },
  Object {
    "__debugKind": "DotToken",
    "end": 52,
    "fullPos": 51,
    "kind": 5,
    "leadingIndent": 8,
    "pos": 51,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 53,
    "fullPos": 52,
    "kind": 21,
    "leadingIndent": 8,
    "pos": 52,
    "text": "x",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 53,
    "fullPos": 53,
    "kind": 41,
    "leadingIndent": 8,
    "pos": 53,
  },
]
`;

exports[`Scanner should-work-with-objects 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 4,
    "text": "p",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 7,
    "fullPos": 5,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "ObjectsKeyword",
    "end": 14,
    "fullPos": 7,
    "kind": 25,
    "leadingIndent": 0,
    "pos": 8,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 15,
    "fullPos": 14,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 14,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 23,
    "fullPos": 15,
    "kind": 26,
    "leadingIndent": 4,
    "pos": 20,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 25,
    "fullPos": 23,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 24,
    "text": "y",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 27,
    "fullPos": 25,
    "kind": 6,
    "leadingIndent": 4,
    "pos": 26,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 30,
    "fullPos": 27,
    "kind": 19,
    "leadingIndent": 4,
    "pos": 28,
    "value": "42",
  },
  Object {
    "__debugKind": "ObjectsKeyword",
    "end": 38,
    "fullPos": 30,
    "kind": 25,
    "leadingIndent": 0,
    "pos": 32,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 39,
    "fullPos": 38,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 38,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 40,
    "fullPos": 39,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 39,
    "text": "p",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 41,
    "fullPos": 40,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 40,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 42,
    "fullPos": 41,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 41,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 50,
    "fullPos": 42,
    "kind": 26,
    "leadingIndent": 4,
    "pos": 47,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 52,
    "fullPos": 50,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 51,
    "text": "x",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 54,
    "fullPos": 52,
    "kind": 6,
    "leadingIndent": 4,
    "pos": 53,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 57,
    "fullPos": 54,
    "kind": 19,
    "leadingIndent": 4,
    "pos": 55,
    "value": "10",
  },
  Object {
    "__debugKind": "MethodKeyword",
    "end": 68,
    "fullPos": 57,
    "kind": 31,
    "leadingIndent": 4,
    "pos": 62,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 70,
    "fullPos": 68,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 69,
    "text": "f",
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 71,
    "fullPos": 70,
    "kind": 2,
    "leadingIndent": 4,
    "pos": 70,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 72,
    "fullPos": 71,
    "kind": 3,
    "leadingIndent": 4,
    "pos": 71,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 73,
    "fullPos": 72,
    "kind": 4,
    "leadingIndent": 4,
    "pos": 72,
  },
  Object {
    "__debugKind": "ThisKeyword",
    "end": 86,
    "fullPos": 73,
    "kind": 27,
    "leadingIndent": 8,
    "pos": 82,
  },
  Object {
    "__debugKind": "DotToken",
    "end": 87,
    "fullPos": 86,
    "kind": 5,
    "leadingIndent": 8,
    "pos": 86,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 88,
    "fullPos": 87,
    "kind": 21,
    "leadingIndent": 8,
    "pos": 87,
    "text": "x",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 88,
    "fullPos": 88,
    "kind": 41,
    "leadingIndent": 8,
    "pos": 88,
  },
]
`;

exports[`Scanner should-work-with-objects-and-slots 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 4,
    "text": "p",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 7,
    "fullPos": 5,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "ObjectsKeyword",
    "end": 14,
    "fullPos": 7,
    "kind": 25,
    "leadingIndent": 0,
    "pos": 8,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 15,
    "fullPos": 14,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 14,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 23,
    "fullPos": 15,
    "kind": 26,
    "leadingIndent": 4,
    "pos": 20,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 25,
    "fullPos": 23,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 24,
    "text": "y",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 27,
    "fullPos": 25,
    "kind": 6,
    "leadingIndent": 4,
    "pos": 26,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 30,
    "fullPos": 27,
    "kind": 19,
    "leadingIndent": 4,
    "pos": 28,
    "value": "42",
  },
  Object {
    "__debugKind": "ObjectsKeyword",
    "end": 38,
    "fullPos": 30,
    "kind": 25,
    "leadingIndent": 0,
    "pos": 32,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 39,
    "fullPos": 38,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 38,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 40,
    "fullPos": 39,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 39,
    "text": "p",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 41,
    "fullPos": 40,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 40,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 42,
    "fullPos": 41,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 41,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 50,
    "fullPos": 42,
    "kind": 26,
    "leadingIndent": 4,
    "pos": 47,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 52,
    "fullPos": 50,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 51,
    "text": "x",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 54,
    "fullPos": 52,
    "kind": 6,
    "leadingIndent": 4,
    "pos": 53,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 57,
    "fullPos": 54,
    "kind": 19,
    "leadingIndent": 4,
    "pos": 55,
    "value": "10",
  },
  Object {
    "__debugKind": "MethodKeyword",
    "end": 68,
    "fullPos": 57,
    "kind": 31,
    "leadingIndent": 4,
    "pos": 62,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 70,
    "fullPos": 68,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 69,
    "text": "f",
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 71,
    "fullPos": 70,
    "kind": 2,
    "leadingIndent": 4,
    "pos": 70,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 72,
    "fullPos": 71,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 71,
    "text": "x",
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 73,
    "fullPos": 72,
    "kind": 1,
    "leadingIndent": 4,
    "pos": 72,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 75,
    "fullPos": 73,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 74,
    "text": "y",
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 76,
    "fullPos": 75,
    "kind": 1,
    "leadingIndent": 4,
    "pos": 75,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 78,
    "fullPos": 76,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 77,
    "text": "z",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 79,
    "fullPos": 78,
    "kind": 3,
    "leadingIndent": 4,
    "pos": 78,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 80,
    "fullPos": 79,
    "kind": 4,
    "leadingIndent": 4,
    "pos": 79,
  },
  Object {
    "__debugKind": "ThisKeyword",
    "end": 93,
    "fullPos": 80,
    "kind": 27,
    "leadingIndent": 8,
    "pos": 89,
  },
  Object {
    "__debugKind": "DotToken",
    "end": 94,
    "fullPos": 93,
    "kind": 5,
    "leadingIndent": 8,
    "pos": 93,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 95,
    "fullPos": 94,
    "kind": 21,
    "leadingIndent": 8,
    "pos": 94,
    "text": "x",
  },
  Object {
    "__debugKind": "AddToken",
    "end": 97,
    "fullPos": 95,
    "kind": 9,
    "leadingIndent": 8,
    "pos": 96,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 99,
    "fullPos": 97,
    "kind": 21,
    "leadingIndent": 8,
    "pos": 98,
    "text": "x",
  },
  Object {
    "__debugKind": "AddToken",
    "end": 101,
    "fullPos": 99,
    "kind": 9,
    "leadingIndent": 8,
    "pos": 100,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 103,
    "fullPos": 101,
    "kind": 21,
    "leadingIndent": 8,
    "pos": 102,
    "text": "y",
  },
  Object {
    "__debugKind": "AddToken",
    "end": 105,
    "fullPos": 103,
    "kind": 9,
    "leadingIndent": 8,
    "pos": 104,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 107,
    "fullPos": 105,
    "kind": 21,
    "leadingIndent": 8,
    "pos": 106,
    "text": "z",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 107,
    "fullPos": 107,
    "kind": 41,
    "leadingIndent": 8,
    "pos": 107,
  },
]
`;

exports[`Scanner should-work-with-printf 1`] = `
Array [
  Object {
    "__debugKind": "PrintfKeyword",
    "end": 6,
    "fullPos": 0,
    "kind": 22,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 8,
    "fullPos": 6,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 7,
  },
  Object {
    "__debugKind": "StringLiteralToken",
    "end": 27,
    "fullPos": 8,
    "kind": 20,
    "leadingIndent": 0,
    "pos": 8,
    "value": " My age is ~.\\\\ n ",
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 29,
    "fullPos": 27,
    "kind": 1,
    "leadingIndent": 0,
    "pos": 28,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 31,
    "fullPos": 29,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 30,
    "value": "8",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 32,
    "fullPos": 31,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 31,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 32,
    "fullPos": 32,
    "kind": 41,
    "leadingIndent": 0,
    "pos": 32,
  },
]
`;

exports[`Scanner should-work-with-set-shorthand 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 4,
    "text": "a",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 7,
    "fullPos": 5,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "ArraysKeyword",
    "end": 13,
    "fullPos": 7,
    "kind": 23,
    "leadingIndent": 0,
    "pos": 8,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 14,
    "fullPos": 13,
    "kind": 2,
    "leadingIndent": 0,
    "pos": 13,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 16,
    "fullPos": 14,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 14,
    "value": "10",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 17,
    "fullPos": 16,
    "kind": 3,
    "leadingIndent": 0,
    "pos": 16,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 20,
    "fullPos": 17,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 19,
    "text": "a",
  },
  Object {
    "__debugKind": "OpenBracketToken",
    "end": 21,
    "fullPos": 20,
    "kind": 7,
    "leadingIndent": 0,
    "pos": 20,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 22,
    "fullPos": 21,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 21,
    "value": "1",
  },
  Object {
    "__debugKind": "CloseBracketToken",
    "end": 23,
    "fullPos": 22,
    "kind": 8,
    "leadingIndent": 0,
    "pos": 22,
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 25,
    "fullPos": 23,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 24,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 27,
    "fullPos": 25,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 26,
    "value": "0",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 27,
    "fullPos": 27,
    "kind": 41,
    "leadingIndent": 0,
    "pos": 27,
  },
]
`;

exports[`Scanner should-work-with-slot-assignment 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 4,
    "text": "o",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 7,
    "fullPos": 5,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "ObjectsKeyword",
    "end": 14,
    "fullPos": 7,
    "kind": 25,
    "leadingIndent": 0,
    "pos": 8,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 15,
    "fullPos": 14,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 14,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 23,
    "fullPos": 15,
    "kind": 26,
    "leadingIndent": 4,
    "pos": 20,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 29,
    "fullPos": 23,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 24,
    "text": "field",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 31,
    "fullPos": 29,
    "kind": 6,
    "leadingIndent": 4,
    "pos": 30,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 33,
    "fullPos": 31,
    "kind": 19,
    "leadingIndent": 4,
    "pos": 32,
    "value": "2",
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 38,
    "fullPos": 33,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 35,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 40,
    "fullPos": 38,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 39,
    "text": "a",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 42,
    "fullPos": 40,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 41,
  },
  Object {
    "__debugKind": "ObjectsKeyword",
    "end": 49,
    "fullPos": 42,
    "kind": 25,
    "leadingIndent": 0,
    "pos": 43,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 50,
    "fullPos": 49,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 49,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 58,
    "fullPos": 50,
    "kind": 26,
    "leadingIndent": 4,
    "pos": 55,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 60,
    "fullPos": 58,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 59,
    "text": "b",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 62,
    "fullPos": 60,
    "kind": 6,
    "leadingIndent": 4,
    "pos": 61,
  },
  Object {
    "__debugKind": "ObjectsKeyword",
    "end": 69,
    "fullPos": 62,
    "kind": 25,
    "leadingIndent": 4,
    "pos": 63,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 70,
    "fullPos": 69,
    "kind": 4,
    "leadingIndent": 4,
    "pos": 69,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 82,
    "fullPos": 70,
    "kind": 26,
    "leadingIndent": 8,
    "pos": 79,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 84,
    "fullPos": 82,
    "kind": 21,
    "leadingIndent": 8,
    "pos": 83,
    "text": "c",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 86,
    "fullPos": 84,
    "kind": 6,
    "leadingIndent": 8,
    "pos": 85,
  },
  Object {
    "__debugKind": "ObjectsKeyword",
    "end": 93,
    "fullPos": 86,
    "kind": 25,
    "leadingIndent": 8,
    "pos": 87,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 94,
    "fullPos": 93,
    "kind": 4,
    "leadingIndent": 8,
    "pos": 93,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 110,
    "fullPos": 94,
    "kind": 26,
    "leadingIndent": 12,
    "pos": 107,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 112,
    "fullPos": 110,
    "kind": 21,
    "leadingIndent": 12,
    "pos": 111,
    "text": "d",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 114,
    "fullPos": 112,
    "kind": 6,
    "leadingIndent": 12,
    "pos": 113,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 116,
    "fullPos": 114,
    "kind": 19,
    "leadingIndent": 12,
    "pos": 115,
    "value": "2",
  },
  Object {
    "__debugKind": "Identifier",
    "end": 119,
    "fullPos": 116,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 118,
    "text": "o",
  },
  Object {
    "__debugKind": "DotToken",
    "end": 120,
    "fullPos": 119,
    "kind": 5,
    "leadingIndent": 0,
    "pos": 119,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 125,
    "fullPos": 120,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 120,
    "text": "field",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 127,
    "fullPos": 125,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 126,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 130,
    "fullPos": 127,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 128,
    "value": "42",
  },
  Object {
    "__debugKind": "Identifier",
    "end": 133,
    "fullPos": 130,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 132,
    "text": "a",
  },
  Object {
    "__debugKind": "DotToken",
    "end": 134,
    "fullPos": 133,
    "kind": 5,
    "leadingIndent": 0,
    "pos": 133,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 135,
    "fullPos": 134,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 134,
    "text": "b",
  },
  Object {
    "__debugKind": "DotToken",
    "end": 136,
    "fullPos": 135,
    "kind": 5,
    "leadingIndent": 0,
    "pos": 135,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 137,
    "fullPos": 136,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 136,
    "text": "c",
  },
  Object {
    "__debugKind": "DotToken",
    "end": 138,
    "fullPos": 137,
    "kind": 5,
    "leadingIndent": 0,
    "pos": 137,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 139,
    "fullPos": 138,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 138,
    "text": "d",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 141,
    "fullPos": 139,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 140,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 144,
    "fullPos": 141,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 142,
    "value": "42",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 144,
    "fullPos": 144,
    "kind": 41,
    "leadingIndent": 0,
    "pos": 144,
  },
]
`;

exports[`Scanner should-work-with-slot-lookup 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 4,
    "text": "o",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 7,
    "fullPos": 5,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "ObjectsKeyword",
    "end": 14,
    "fullPos": 7,
    "kind": 25,
    "leadingIndent": 0,
    "pos": 8,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 15,
    "fullPos": 14,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 14,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 23,
    "fullPos": 15,
    "kind": 26,
    "leadingIndent": 4,
    "pos": 20,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 29,
    "fullPos": 23,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 24,
    "text": "field",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 31,
    "fullPos": 29,
    "kind": 6,
    "leadingIndent": 4,
    "pos": 30,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 33,
    "fullPos": 31,
    "kind": 19,
    "leadingIndent": 4,
    "pos": 32,
    "value": "2",
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 38,
    "fullPos": 33,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 35,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 40,
    "fullPos": 38,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 39,
    "text": "a",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 42,
    "fullPos": 40,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 41,
  },
  Object {
    "__debugKind": "ObjectsKeyword",
    "end": 49,
    "fullPos": 42,
    "kind": 25,
    "leadingIndent": 0,
    "pos": 43,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 50,
    "fullPos": 49,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 49,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 58,
    "fullPos": 50,
    "kind": 26,
    "leadingIndent": 4,
    "pos": 55,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 60,
    "fullPos": 58,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 59,
    "text": "b",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 62,
    "fullPos": 60,
    "kind": 6,
    "leadingIndent": 4,
    "pos": 61,
  },
  Object {
    "__debugKind": "ObjectsKeyword",
    "end": 69,
    "fullPos": 62,
    "kind": 25,
    "leadingIndent": 4,
    "pos": 63,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 70,
    "fullPos": 69,
    "kind": 4,
    "leadingIndent": 4,
    "pos": 69,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 82,
    "fullPos": 70,
    "kind": 26,
    "leadingIndent": 8,
    "pos": 79,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 84,
    "fullPos": 82,
    "kind": 21,
    "leadingIndent": 8,
    "pos": 83,
    "text": "c",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 86,
    "fullPos": 84,
    "kind": 6,
    "leadingIndent": 8,
    "pos": 85,
  },
  Object {
    "__debugKind": "ObjectsKeyword",
    "end": 93,
    "fullPos": 86,
    "kind": 25,
    "leadingIndent": 8,
    "pos": 87,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 94,
    "fullPos": 93,
    "kind": 4,
    "leadingIndent": 8,
    "pos": 93,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 110,
    "fullPos": 94,
    "kind": 26,
    "leadingIndent": 12,
    "pos": 107,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 112,
    "fullPos": 110,
    "kind": 21,
    "leadingIndent": 12,
    "pos": 111,
    "text": "d",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 114,
    "fullPos": 112,
    "kind": 6,
    "leadingIndent": 12,
    "pos": 113,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 117,
    "fullPos": 114,
    "kind": 19,
    "leadingIndent": 12,
    "pos": 115,
    "value": "42",
  },
  Object {
    "__debugKind": "Identifier",
    "end": 120,
    "fullPos": 117,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 119,
    "text": "o",
  },
  Object {
    "__debugKind": "DotToken",
    "end": 121,
    "fullPos": 120,
    "kind": 5,
    "leadingIndent": 0,
    "pos": 120,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 126,
    "fullPos": 121,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 121,
    "text": "field",
  },
  Object {
    "__debugKind": "Identifier",
    "end": 129,
    "fullPos": 126,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 128,
    "text": "a",
  },
  Object {
    "__debugKind": "DotToken",
    "end": 130,
    "fullPos": 129,
    "kind": 5,
    "leadingIndent": 0,
    "pos": 129,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 131,
    "fullPos": 130,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 130,
    "text": "b",
  },
  Object {
    "__debugKind": "DotToken",
    "end": 132,
    "fullPos": 131,
    "kind": 5,
    "leadingIndent": 0,
    "pos": 131,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 133,
    "fullPos": 132,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 132,
    "text": "c",
  },
  Object {
    "__debugKind": "DotToken",
    "end": 134,
    "fullPos": 133,
    "kind": 5,
    "leadingIndent": 0,
    "pos": 133,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 135,
    "fullPos": 134,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 134,
    "text": "d",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 135,
    "fullPos": 135,
    "kind": 41,
    "leadingIndent": 0,
    "pos": 135,
  },
]
`;

exports[`Scanner should-work-with-variable-assignment 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 4,
    "text": "x",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 7,
    "fullPos": 5,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 9,
    "fullPos": 7,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 8,
    "value": "1",
  },
  Object {
    "__debugKind": "Identifier",
    "end": 12,
    "fullPos": 9,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 11,
    "text": "x",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 14,
    "fullPos": 12,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 13,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 17,
    "fullPos": 14,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 15,
    "value": "42",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 17,
    "fullPos": 17,
    "kind": 41,
    "leadingIndent": 0,
    "pos": 17,
  },
]
`;

exports[`Scanner should-work-with-variable-reference 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 4,
    "text": "x",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 7,
    "fullPos": 5,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 9,
    "fullPos": 7,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 8,
    "value": "1",
  },
  Object {
    "__debugKind": "Identifier",
    "end": 11,
    "fullPos": 9,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 10,
    "text": "x",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 11,
    "fullPos": 11,
    "kind": 41,
    "leadingIndent": 0,
    "pos": 11,
  },
]
`;

exports[`Scanner should-work-with-while-expression 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 4,
    "text": "x",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 7,
    "fullPos": 5,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 6,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 9,
    "fullPos": 7,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 8,
    "value": "3",
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 13,
    "fullPos": 9,
    "kind": 26,
    "leadingIndent": 0,
    "pos": 10,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 15,
    "fullPos": 13,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 14,
    "text": "y",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 17,
    "fullPos": 15,
    "kind": 6,
    "leadingIndent": 0,
    "pos": 16,
  },
  Object {
    "__debugKind": "SubToken",
    "end": 19,
    "fullPos": 17,
    "kind": 10,
    "leadingIndent": 0,
    "pos": 18,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 20,
    "fullPos": 19,
    "kind": 19,
    "leadingIndent": 0,
    "pos": 19,
    "value": "1",
  },
  Object {
    "__debugKind": "WhileKeyword",
    "end": 27,
    "fullPos": 20,
    "kind": 30,
    "leadingIndent": 0,
    "pos": 22,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 29,
    "fullPos": 27,
    "kind": 21,
    "leadingIndent": 0,
    "pos": 28,
    "text": "x",
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 30,
    "fullPos": 29,
    "kind": 4,
    "leadingIndent": 0,
    "pos": 29,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 36,
    "fullPos": 30,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 35,
    "text": "x",
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 38,
    "fullPos": 36,
    "kind": 6,
    "leadingIndent": 4,
    "pos": 37,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 40,
    "fullPos": 38,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 39,
    "text": "x",
  },
  Object {
    "__debugKind": "AddToken",
    "end": 42,
    "fullPos": 40,
    "kind": 9,
    "leadingIndent": 4,
    "pos": 41,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 44,
    "fullPos": 42,
    "kind": 21,
    "leadingIndent": 4,
    "pos": 43,
    "text": "y",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 44,
    "fullPos": 44,
    "kind": 41,
    "leadingIndent": 4,
    "pos": 44,
  },
]
`;
